FInish integrating stripe

--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
         <li>How Objects and Closures are the Same Thing</li>
         <li>How <code>new</code> and <code>this</code> Really Work</li>
         <li>Understanding the Web of References</li>
-        <li>Function statements vs function expressions vs constructor functions</li>
-        <li>more to come, tell me what you want in this course!</li>
+        <li>Function Statements vs Function Expressions vs Constructor Functions</li>
+        <li>More to come, tell me what you want in this course!</li>
       </ul>
     </div><div class="grid_6 product-box">
       <img src="images/product-3.png" title="">
