--- a/subscribe.html
+++ b/subscribe.html
@@ -17,9 +17,9 @@
 <body>
 
 <div class="price_table-bg" id="plans">
-  <h3>TEST FORM</h3>
+  <h3>Subscription Form</h3>
   <div class="row price_table">
-    <p>This is not a live form, please wait while I implement the real backend</p>
+    <p>Please review your order and enter your payment details.</p>
     <div class="row">
       <div class="table grid_4" id="plan-basic">
         <h4 class="table-1">basic</h4>
@@ -59,15 +59,15 @@
   </div>
 
   <section class="row payment-form">
-    <form action="" method="POST" id="payment-form">
+    <form action="http://creationix.com:5000/subscribe" method="POST" id="payment-form">
       <article class="grid_6">
         <fieldset>
           <label for="name-field">Your Name</label>
-          <input type="text" required name="name" id="name-field">
+          <input type="text" required data-stripe="name" name="name" id="name-field">
         </fieldset>
         <fieldset>
           <label for="email-field">Email</label>
-          <input type="email" required name="email" id="email-field">
+          <input type="email" required data-stripe="email" name="email" id="email-field">
         </fieldset>
         <fieldset>
           <label for="comments-field">Comments</label>
@@ -81,11 +81,11 @@
               <label for="plan-basic-radio"><span></span>Basic Subscription</label>
             </span>
             <span>
-              <input type="radio" name="plan" id="plan-advanced-radio">
+              <input type="radio" name="plan" value="advanced" id="plan-advanced-radio">
               <label for="plan-advanced-radio"><span></span>Advanced Subscription</label>
             </span>
             <span>
-              <input type="radio" name="plan" id="plan-ultimate-radio">
+              <input type="radio" name="plan" value="ultimate" id="plan-ultimate-radio">
               <label for="plan-ultimate-radio"><span></span>Ultimate Subscription</label>
             </span>
           </div>
@@ -104,7 +104,7 @@
         <fieldset>
           <label for="month-field">Expiration Month</label>
           <span class="select">
-            <select id="month-field" data-stripe="month">
+            <select id="month-field" data-stripe="exp_month">
               <option>Choose a Month</option>
               <option value="01">1 - January</option>
               <option value="02">2 - February</option>
@@ -123,11 +123,11 @@
         </fieldset>
         <fieldset>
           <label for="year-field">Year</label>
-          <input type="year" size="4" placeholder="YYYY" data-stripe="year" id="year-field" required>
+          <input type="year" size="4" placeholder="YYYY" data-stripe="exp_year" id="year-field" required>
         </fieldset>
         <fieldset>
-          <input name="submit" id="submitbtn" value="Subscribe" class="first" type="submit">
-          <input name="reset" id="resetbtn" value="Reset" type="reset">
+          <input id="submitbtn" value="Subscribe" class="first" type="submit">
+          <input id="resetbtn" value="Reset" type="reset">
         </fieldset>
       </article>
     </form>
