Make vimeo relative protocol

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="shortcut icon" href="">
   <meta name="description" content="">
   <!--[if lt IE 9]>
-    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
   <!--[if lte IE 7]><script src="js/lte-ie7.js"></script><![endif]-->
   <!-- Mobile Specific Metas -->
@@ -109,7 +109,7 @@
 <div class="product-box-bg">
   <div class="row">
     <div class="grid_6 product-box">
-      <iframe src="http://player.vimeo.com/video/97465914?title=1&amp;byline=0&amp;portrait=0&amp;color=2b9884" width="560" height="320" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+      <iframe src="//player.vimeo.com/video/97465914?title=1&amp;byline=0&amp;portrait=0&amp;color=2b9884" width="560" height="320" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
     </div><div class="grid_6 product-box product-box-text">
       <h3>Learn New Workflows</h3>
       <p>I have developed some new workflows that reduce barrier to entry to people learning to program.  The programming environment will wok offline and on virtually any machine.  This will include Android tablets, iPads, ChromeBooks, and of course laptops and desktops running Windows, OSX or Linux.</p>
