--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <a href="#"><span style="color: #6394d7;" class="icon-html5"></span></a>
       <h4><a href="#">HTML5 Games</a></h4>
       <p>While much of the learning is serious, I'll also teach you a variety of methods to make HTML5 games.</p>
-      <p>You will be a better programmer because you will love doing it!.
+      <p>You will be a better programmer because you will love doing it!
     </div>
   </div>
 </div>
