--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       <iframe src="//player.vimeo.com/video/97465914?title=1&amp;byline=0&amp;portrait=0&amp;color=2b9884" width="560" height="320" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
     </div><div class="grid_6 product-box product-box-text">
       <h3>Learn New Workflows</h3>
-      <p>I have developed some new workflows that reduce barrier to entry to people learning to program.  The programming environment will wok offline and on virtually any machine.  This will include Android tablets, iPads, ChromeBooks, and of course laptops and desktops running Windows, OSX or Linux.</p>
+      <p>I have developed some new workflows that reduce barrier to entry to people learning to program.  The programming environment will work offline and on virtually any machine.  This will include Android tablets, iPads, ChromeBooks, and of course laptops and desktops running Windows, OSX or Linux.</p>
       <p>Soon I'll make a version of the environment that even runs well on smart-phones for truly portable programming.</p>
       <ul>
         <li>Runs on any device capable of browsing the web</li>
