Make links semantic

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
       <div class="menu-mobile">
         <div class="menu-button icon-menu-2 show-phone"></div>
         <ul class="menu-links">
-          <li><a href="javascript:void(0)" onClick="goToByScroll('courses')">Courses</a></li>
-          <li><a href="javascript:void(0)" onClick="goToByScroll('plans')">Plans</a></li>
+          <li><a href="#courses">Courses</a></li>
+          <li><a href="#plans">Plans</a></li>
         </ul>
       </div>
       <div class="menu-right">
@@ -68,7 +68,7 @@
     <div class="grid_9 text-button">
       <p>Creationix School of Innovation is just getting started.</p>
     </div><div class="grid_3 text-button">
-      <a class="btn-text" href="javascript:void(0)" onClick="goToByScroll('plans')">Join Now</a>
+      <a class="btn-text" href="#plans">Join Now</a>
     </div>
   </div>
 </div>
