Fix confusing text

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         <h4 class="table-1">basic</h4>
         <div class="price"><sup>$</sup>9</div>
         <div class="option">per month</div>
-        <p>As a basic member you will get full access to all content.  As there is none yet, you're supporting the idea. The more people that sign up, the more time I'll have to make new content. Tell your friends!</p>
+        <p>As a basic member you will get full access to all premium content.  As there is none yet, you're supporting the idea. The more people that sign up, the more time I'll have to make new content. Tell your friends!</p>
         <ul class="table-1">
           <li>Unlimited Access to Premium Content</li>
         </ul>
