--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 <div class="product-box-bg">
   <div class="row">
     <div class="grid_6 product-box">
-      <iframe src="//player.vimeo.com/video/97465914?title=1&amp;byline=0&amp;portrait=0&amp;color=2b9884" width="560" height="320" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+      <a href="https://vimeo.com/97465914"><img src="images/tedit-demo.png" title="Tedit Demo on Vimeo"></a>
     </div><div class="grid_6 product-box product-box-text">
       <h3>Learn New Workflows</h3>
       <p>I have developed some new workflows that reduce barrier to entry to people learning to program.  The programming environment will work offline and on virtually any machine.  This will include Android tablets, iPads, ChromeBooks, and of course laptops and desktops running Windows, OSX or Linux.</p>
@@ -235,10 +235,6 @@
 
 <!-- jQuery library -->
 <script src="js/jquery-1.8.2.min.js"></script>
-<!-- fitvids -->
-<script src="js/jquery.fitvids.js"></script>
-<!-- bxSlider JS -->
-<script src="js/jquery.bxslider.js"></script>
 <!-- all JS scripts -->
 <script src="js/scripts.js"></script>
 <script>
