Close school for now

--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
 <div class="text-button-bg">
   <div class="row">
     <div class="grid_9 text-button">
-      <p>Creationix School of Innovation is just getting started.</p>
-    </div><div class="grid_3 text-button">
-      <a class="btn-text" href="#plans">Join Now</a>
-    </div>
+      <p>Creationix School of Innovation is currently closed.</p>
+   
+     <p>Check back later to see if we begin accepting new signups</p>
+ </div>
   </div>
 </div>
 <!-- /TEXT + BUTTON -->
@@ -137,52 +137,6 @@
 </div>
 <!-- /PRODUCT BOX #3 -->
 
-<!-- PRICE TABLE -->
-<div class="price_table-bg" id="plans">
-  <h3>Subscription Plans</h3>
-  <div class="row price_table">
-    <div class="grid_8 offset_2">
-      <p>As a subscribing member of the school, you'll have full access to all content.  Also depending on the level of extra support you give me, I'll help you share your creations with the world.  This special hosting service can run tedit build rules on-the fly and makes for a super simple deployment system for publishing small sites.</p>
-    </div>
-    <div class="row">
-      <div class="table grid_4">
-        <h4 class="table-1">basic</h4>
-        <div class="price"><sup>$</sup>9</div>
-        <div class="option">per month</div>
-        <p>As a basic member you will get full access to all premium content.  As there is none yet, you're supporting the idea. The more people that sign up, the more time I'll have to make new content. Tell your friends!</p>
-        <ul class="table-1">
-          <li>Unlimited Access to Premium Content</li>
-        </ul>
-        <div class="action-button"><a href="subscribe.html#basic" target="_blank">Subscribe now</a></div>
-      </div>
-      <div class="table grid_4">
-        <h4 class="table-2">advanced</h4>
-        <div class="price"><sup>$</sup>19</div>
-        <div class="option">per month</div>
-        <p>As an advanced member, you'll also get all premium content and I'll throw in two hosted tedit sites.</p>
-        <ul class="table-2">
-          <li>Unlimited Access to Premium Content</li>
-          <li>Two Hosted Tedit Platform sites</li>
-          <li>Limited Email Support</li>
-        </ul>
-        <div class="action-button"><a href="subscribe.html#advanced" target="_blank">Subscribe now</a></div>
-      </div>
-      <div class="table grid_4">
-        <h4 class="table-3">ultimate</h4>
-        <div class="price"><sup>$</sup>29</div>
-        <div class="option">per month</div>
-        <p>As an ultimate member you are serious about learning.  You get all content and up to five live sites.</p>
-        <ul class="table-3">
-          <li>Unlimited Access to Premium Content</li>
-          <li>Five Hosted Tedit Platform Sites</li>
-          <li>Limited Email Support</li>
-        </ul>
-        <div class="action-button"><a href="subscribe.html#ultimate" target="_blank">Subscribe now</a></div>
-      </div>
-    </div>
-  </div>
-</div>
-<!-- /PRICE TABLE -->
 
 <!-- FOOTER -->
 <div class="footer-bg">
